# chess-bot

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
engine/: eval.cpp  eval.hpp  nnue.cpp  nnue.hpp  order.hpp  search.cpp  search.hpp  train.py
game/: bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  movegen.cpp  movegen.hpp
tests/: perft.cpp
